Added auth on frontend

--- a/Front-end/survey-front/index.html
+++ b/Front-end/survey-front/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/title-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Survey form</title>
+  <title>Project survey</title>
 </head>
 
 <body>
